--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
-20200915
+## 20200915
 Hello World
 
-initialised this! 
+1. initialised this! 
+
+Syntax highlighted code block
+
+# Header 1
+## Header 2
+### Header 3
+
+- Bulleted
+- List
+
+1. Numbered
+2. List
+
+**Bold** and _Italic_ and `Code` text
